fix scroll bug on open collapse

--- a/_includes/gitarrenunterricht.html
+++ b/_includes/gitarrenunterricht.html
@@ -81,12 +81,12 @@
                 <div class="panel panel-default">
                 <div class="panel-heading" role="tab" id="headingOne">
                     <h4 class="panel-title">
-                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#_collapseOne" aria-expanded="true" aria-controls="_collapseOne">
                         <b>Gitarrenunterricht für Kinder: (Zum öffnen klicken)</b>
                     </a>
                     </h4>
                 </div>
-                <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+                <div id="_collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                     <div class="panel-body">
                         <p>
                             Ich gebe Gitarrenunterricht für Kinder ab dem Schuleintrittsalter. Mit Hilfe einer "Gitarrenschule" werden sie an das Lesen und Umsetzen von Noten herangeführt.
@@ -102,12 +102,12 @@
                 <div class="panel panel-default">
                     <div class="panel-heading" role="tab" id="headingTwo">
                     <h4 class="panel-title">
-                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion2" href="#_collapseTwo" aria-expanded="false" aria-controls="_collapseTwo">
                         <b>Gitarrenunterricht für Jugendliche und Erwachsene: (Zum öffnen klicken)</b>
                         </a>
                     </h4>
                     </div>
-                    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                    <div id="_collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                     <div class="panel-body">
                         <p>
                             Der Unterricht ist schülerzentiert. In einem Vorgespräch versuche ich etwas über die musikalischen Vorlieben und Neigungen des Schülers zu erfahren, um entsprechendes Unterrichtsmaterial anzubieten.
