--- a/_includes/gitarrenunterricht.html
+++ b/_includes/gitarrenunterricht.html
@@ -96,8 +96,6 @@
                 </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-6">
             <div class="panel-group" id="accordion2" role="tablist" aria-multiselectable="true">
                 <div class="panel panel-default">
                     <div class="panel-heading" role="tab" id="headingTwo">
@@ -121,6 +119,10 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="col-md-6">
+            
+            <img class="stdimg" src="assets/images/unterricht/spielen.jpg">
         </div>
     </div>
 </div>
