--- a/_includes/kontakt.html
+++ b/_includes/kontakt.html
@@ -8,7 +8,7 @@
 <div class="container kontakt-container">
 
   <div class="row">
-    <h3>Kontaktdaten - Jetzt unverbindlichen Kennlerntermin vereinbaren</h3>
+    <h3>Kontaktdaten - Jetzt unverbindlichen Kennlerntermin sichern</h3>
     <hr>
     <div class="container icon-row-container contact_options">
       <div class="row margin-top-elements-in-row ">
