--- a/_includes/location.html
+++ b/_includes/location.html
@@ -10,7 +10,7 @@
         <div class="col-md-6">
             <br>
             <h2>Unterrichtsort</h2>
-            <p>Der Unterrichtsort befindet sich in einer ruhigen Seitenstraße unweit der U-Bahn Osterstraße (Karte unter <a href="kontakt.html#gmapsElement">Kontakt</a>).</p>
+            <p>Der Unterrichtsort befindet sich in einer ruhigen Seitenstraße unweit der U-Bahn Osterstraße (Karte unter <a href="#kontakt">Kontakt</a>).</p>
         </div>
         <div class="col-md-6">
             <img class="full_width" src="assets/images/location/haus_aussen.jpg">
