--- a/_includes/gitarrenunterricht.html
+++ b/_includes/gitarrenunterricht.html
@@ -79,46 +79,40 @@
         <div class="col-md-6">
             <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
                 <div class="panel panel-default">
-                <div class="panel-heading" role="tab" id="headingOne">
+                  <div class="panel-heading" role="tab" id="headingOne">
                     <h4 class="panel-title">
-                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#_collapseOne" aria-expanded="true" aria-controls="_collapseOne">
+                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#_collapseOne" aria-expanded="true" aria-controls="_collapseOne">
                         <b>Gitarrenunterricht für Kinder: (Zum öffnen klicken)</b>
-                    </a>
+                      </a>
                     </h4>
-                </div>
-                <div id="_collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+                  </div>
+                  <div id="_collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                     <div class="panel-body">
-                        <p>
-                            Ich gebe Gitarrenunterricht für Kinder ab dem Schuleintrittsalter. Mit Hilfe einer "Gitarrenschule" werden sie an das Lesen und Umsetzen von Noten herangeführt.
-                            Eine Lehrerbegleitung lockert den Unterricht auf. So wird zusammen gespielt und gesungen.<br><br>
-                        </p>
+                        Ich gebe Gitarrenunterricht für Kinder ab dem Schuleintrittsalter. Mit Hilfe einer "Gitarrenschule" werden sie an das Lesen und Umsetzen von Noten herangeführt.
+                        Eine Lehrerbegleitung lockert den Unterricht auf. So wird zusammen gespielt und gesungen.
                     </div>
+                  </div>
                 </div>
-                </div>
-            </div>
-            <div class="panel-group" id="accordion2" role="tablist" aria-multiselectable="true">
                 <div class="panel panel-default">
-                    <div class="panel-heading" role="tab" id="headingTwo">
+                  <div class="panel-heading" role="tab" id="headingTwo">
                     <h4 class="panel-title">
-                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion2" href="#_collapseTwo" aria-expanded="false" aria-controls="_collapseTwo">
+                      <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#_collapseTwo" aria-expanded="false" aria-controls="_collapseTwo">
                         <b>Gitarrenunterricht für Jugendliche und Erwachsene: (Zum öffnen klicken)</b>
-                        </a>
+                      </a>
                     </h4>
-                    </div>
-                    <div id="_collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                  </div>
+                  <div id="_collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                     <div class="panel-body">
-                        <p>
-                            Der Unterricht ist schülerzentiert. In einem Vorgespräch versuche ich etwas über die musikalischen Vorlieben und Neigungen des Schülers zu erfahren, um entsprechendes Unterrichtsmaterial anzubieten.
-                            Bei Anfängern geht es darum "Basics" zu erlernen. Eine gute Technik ist u.a. Voraussetzung, sich in den verschiedenen Musikstilen zurechtzufinden und auszudrücken. Zum Start bieten sich meistens zwei Möglichkeiten an: Liedbegleitung nach Akkorden, oder Melodiespiel nach Noten.
-                            Bei fortgeschrittenen Spielern stimme ich den Unterricht noch stärker auf die individuellen Fähigkeiten und Bedürfnisse ab.
-                            Musiktheorie lasse ich in den Unterricht "einfließen".<br><br>
-                            
-                            Der Gitarrenunterricht ist von der Kulturbehörde als Berufs- bzw. Prüfungsvorbereitend anerkannt.
-                        </p>
+                        Der Unterricht ist schülerzentiert. In einem Vorgespräch versuche ich etwas über die musikalischen Vorlieben und Neigungen des Schülers zu erfahren, um entsprechendes Unterrichtsmaterial anzubieten.
+                        Bei Anfängern geht es darum "Basics" zu erlernen. Eine gute Technik ist u.a. Voraussetzung, sich in den verschiedenen Musikstilen zurechtzufinden und auszudrücken. Zum Start bieten sich meistens zwei Möglichkeiten an: Liedbegleitung nach Akkorden, oder Melodiespiel nach Noten.
+                        Bei fortgeschrittenen Spielern stimme ich den Unterricht noch stärker auf die individuellen Fähigkeiten und Bedürfnisse ab.
+                        Musiktheorie lasse ich in den Unterricht "einfließen".<br><br>
+                        
+                        Der Gitarrenunterricht ist von der Kulturbehörde als Berufs- bzw. Prüfungsvorbereitend anerkannt.
                     </div>
-                    </div>
+                  </div>
                 </div>
-            </div>
+              </div>
         </div>
         <div class="col-md-6">
             
