--- a/_includes/technik.html
+++ b/_includes/technik.html
@@ -24,29 +24,29 @@
 
 <div class="my-gallery rowcount_1" itemscope itemtype="http://schema.org/ImageGallery">
     <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-        <a href="./assets/images/technik/1.png" itemprop="contentUrl" data-size="1920x1080">
-            <img src="./assets/images/technik/1.png" itemprop="thumbnail" alt="Image description" />
+        <a href="./assets/images/technik/Cubase_logo.svg" itemprop="contentUrl" data-size="1280x365">
+            <img src="./assets/images/technik/1.png" itemprop="thumbnail" alt="Cubase Logo" />
         </a>
         <figcaption itemprop="caption description">Für Aufnahmen steht das Sequenzerprogramm Cubase, mit diversen Plugins zur Verfügung.</figcaption>
     </figure>
 
     <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-        <a href="./assets/images/technik/2.jpg" itemprop="contentUrl" data-size="1920x1080">
-            <img src="./assets/images/technik/2.jpg" itemprop="thumbnail" alt="Image description" />
+        <a href="./assets/images/technik/MG_4199_m.jpg" itemprop="contentUrl" data-size="1920x1280">
+            <img src="./assets/images/technik/2.jpg" itemprop="thumbnail" alt="12 Kanal Mixer Signalansteuerung" />
         </a>
         <figcaption itemprop="caption description">Ein 12 Kanal Mixer sorgt für die richtige Signalansteuerung.</figcaption>
     </figure>
 
     <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-        <a href="./assets/images/technik/3.jpg" itemprop="contentUrl" data-size="1920x1080">
-            <img src="./assets/images/technik/3.jpg" itemprop="thumbnail" alt="Image description" />
+        <a href="./assets/images/technik/MG_4205_m.jpg" itemprop="contentUrl" data-size="1920x1280">
+            <img src="./assets/images/technik/3.jpg" itemprop="thumbnail" alt="Membranmikrofon in Nahaufnahme" />
         </a>
         <figcaption itemprop="caption description">Diverse Groß- und Kleinmembranmikrofone sind zum abnehmen des Gitarrensounds oder der Gesangsstimme bereit.</figcaption>
     </figure>
 
     <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-        <a href="./assets/images/technik/4.jpg" itemprop="contentUrl" data-size="1920x1080">
-            <img src="./assets/images/technik/4.jpg" itemprop="thumbnail" alt="Image description" />
+        <a href="./assets/images/technik/MG_4209_m.jpg" itemprop="contentUrl" data-size="1000x1500">
+            <img src="./assets/images/technik/4.jpg" itemprop="thumbnail" alt="Ein E-Piano zum Einspielen von Midi-Noten" />
         </a>
         <figcaption itemprop="caption description">Ein E-Piano zum Einspielen von Midi-Noten, zum Erklären der Musiktheorie oder einfach zum Bespielen ist vorhanden.</figcaption>
     </figure>
