--- a/_includes/gitarrenunterricht.html
+++ b/_includes/gitarrenunterricht.html
@@ -114,9 +114,17 @@
                 </div>
               </div>
         </div>
-        <div class="col-md-6">
-            
-            <img class="stdimg" src="assets/images/unterricht/spielen.jpg">
+        <div class="col-md-6">       
+            <!-- <img class="stdimg" src="assets/images/unterricht/spielen.jpg"> -->
+
+            <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
+                <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                    <a href="./assets/images/unterricht/spielen_m.jpg" itemprop="contentUrl" data-size="1920x1187">
+                        <img src="./assets/images/unterricht/spielen.jpg" itemprop="thumbnail" alt="Bernhard Welling gibt Gitarrenunterricht" />
+                    </a>
+                </figure>
+            </div>
+            <div style="clear: both;"></div>
         </div>
     </div>
 </div>
