--- a/_includes/location.html
+++ b/_includes/location.html
@@ -13,7 +13,16 @@
             <p>Der Unterrichtsort befindet sich in einer ruhigen Seitenstraße unweit der U-Bahn Osterstraße (Karte unter <a href="#kontakt">Kontakt</a>).</p>
         </div>
         <div class="col-md-6">
-            <img class="full_width" src="assets/images/location/haus_aussen.jpg">
+            <!-- <img class="full_width" src="assets/images/location/haus_aussen.jpg"> -->
+
+            <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
+                <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                    <a href="./assets/images/location/haus_aussen.jpg" itemprop="contentUrl" data-size="363x230">
+                        <img src="./assets/images/location/haus_aussen.jpg" itemprop="thumbnail" alt="Außenansicht der Unterrichtsräume von Gitarrenlehrer Bernhard Welling in Eimsbüttel nahe der Osterstraße" />
+                    </a>
+                </figure>
+            </div>
+            <div style="clear: both;"></div>
         </div>
     </div>
 
@@ -21,7 +30,16 @@
 
     <div class="row">
         <div class="col-md-6">
-            <img class="full_width" src="assets/images/gallery_main/3.png">
+            <!-- <img class="full_width" src="assets/images/gallery_main/3.png"> -->
+
+            <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
+                <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                    <a href="./assets/images/gallery_main/MG_4179_m.jpg" itemprop="contentUrl" data-size="1920x1280">
+                        <img src="./assets/images/gallery_main/3.png" itemprop="thumbnail" alt="Einblick in die Unterrichtsräume und das schalldichte Tonstudio von Gitarrenlehrer Bernhard Welling in Eimsbüttel" />
+                    </a>
+                </figure>
+            </div>
+            <div style="clear: both;"></div>
         </div>
         <div class="col-md-6">
             <br>
