--- a/_includes/technik.html
+++ b/_includes/technik.html
@@ -15,14 +15,23 @@
                 </p>
         </div>
         <div class="col-md-6">
-            <img class="full_width" src="assets/images/technik/technik.jpg">
+            <!-- <img class="full_width" src="assets/images/technik/technik.jpg"> -->
+
+            <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
+                <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                    <a href="./assets/images/technik/technik_m.jpg" itemprop="contentUrl" data-size="1920x1280">
+                        <img src="./assets/images/technik/technik.jpg" itemprop="thumbnail" alt="Professionelles technisches Equipment bei Gitarrenlehrer Bernhard Welling in Eimsbüttel" />
+                    </a>
+                </figure>
+            </div>
+            <div style="clear: both;"></div>
         </div>
     </div>
 </div>
 
 <hr class="line-splitter">
 
-<div class="my-gallery rowcount_1" itemscope itemtype="http://schema.org/ImageGallery">
+<div class="my-gallery gallery_row" itemscope itemtype="http://schema.org/ImageGallery">
     <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
         <a href="./assets/images/technik/Cubase_logo.svg" itemprop="contentUrl" data-size="1280x365">
             <img src="./assets/images/technik/1.png" itemprop="thumbnail" alt="Cubase Logo" />
