--- a/_includes/person.html
+++ b/_includes/person.html
@@ -74,7 +74,16 @@
             </div>
         </div>
         <div class="col-md-6">
-            <img class="full_width" src="assets/images/person/person_art.jpg">
+            <!-- <img class="full_width" src="assets/images/person/person_art.jpg"> -->
+
+            <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
+                <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                    <a href="./assets/images/person/person_art_m.jpg" itemprop="contentUrl" data-size="1400x2104">
+                        <img src="./assets/images/person/person_art.jpg" itemprop="thumbnail" alt="Portraitfoto von Gitarrenlehrer Bernhard Welling vor seinen Unterrichtsräumen in Hamburg Eimsbüttel" />
+                    </a>
+                </figure>
+            </div>
+            <div style="clear: both;"></div>
         </div>
     </div>
 </div>
