--- a/css/style.css
+++ b/css/style.css
@@ -293,30 +293,35 @@ footer{
     width: 100%;
 }
 
-.my-gallery>figure{
+.my-gallery img{
+    width: 100%;
+    display: block;
+}
+
+.gallery_row>figure{
     width: 50%;
     margin: auto;
     float: none;
 }
 @media (min-width: 768px){
-    .my-gallery>figure{
+    .gallery_row>figure{
         width: 25%;
         margin: auto;
         float: left;
     }
 }
 
-.my-gallery img {
+.gallery_row img {
     max-width: 90%;
     margin-bottom: 5px;
 }
 
-.my-gallery figcaption{
+.gallery_row figcaption{
     max-width: 90%;
     margin-bottom: 15px;
 }
 @media (min-width: 768px){
-    .my-gallery figcaption{
+    .gallery_row figcaption{
         max-width: 90%;
         margin-bottom: 0;
     }
