--- a/_includes/kontakt.html
+++ b/_includes/kontakt.html
@@ -6,9 +6,8 @@
 </div>
 
 <div class="container kontakt-container">
-
   <div class="row">
-    <h3>Kontaktdaten - Jetzt unverbindlichen Kennlerntermin sichern</h3>
+    <h3>Kontaktdaten - Jetzt unverbindlichen Termin sichern</h3>
     <hr>
     <div class="container icon-row-container contact_options">
       <div class="row margin-top-elements-in-row ">
@@ -33,8 +32,6 @@
             </div>
       </div>
   </div>
-    
-    
     <p></p><!--Intended as spacer-->
     
   </div>
