--- a/_includes/gitarrenunterricht.html
+++ b/_includes/gitarrenunterricht.html
@@ -6,22 +6,22 @@
 
 <div class="container">
     <div class="row center-text unterricht-schwerpunkte">
-        <div class="col-md-2 col-md-offset-1">
+        <div class="col-md-4">
             <img class="previewIcon" src="assets/images/schwerpunkte/spanish-guitar.svg">
             <div><h3>Klassische Gitarre</h3></div>
-            <a tabindex="0" class="btn btn-primary" role="button" data-toggle="popover" data-trigger="focus" title="Klassische Gitarre" data-content="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut">Mehr erfahren</a>
+            <a tabindex="0" class="btn btn-primary" role="button" data-toggle="popover" data-trigger="focus" title="Klassische Gitarre" data-content='Der Begriff "klassische Gitarre" bezieht sich auf die Art des Instrumentes, seine Haltung und Spielweise, sowie das Repertoire. Es können Stücke aus den Musikepochen von Renaissance bis zur Moderne erlernt werden. Notenkentnisse sind von Vorteil aber kein Muss, da viele Stücke auch als Tabulatur (Griffschrift) angeboten werden. Auch Anfänger könnnen mit einfachen Stücken beginnen. Die Tonbildung spielt bei der Konzertgitarre und speziell beim Spiel klassischer Literatur eine große Rolle.'>Mehr erfahren</a>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-4">
             <img class="previewIcon" src="assets/images/schwerpunkte/hand.svg">
             <div><h3>Fingerstyle</h3></div>
-            <a tabindex="0" class="btn btn-primary" role="button" data-toggle="popover" data-trigger="focus" title="Fingerstyle" data-content="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut">Mehr erfahren</a>
+            <a tabindex="0" class="btn btn-primary" role="button" data-toggle="popover" data-trigger="focus" title="Fingerstyle" data-content='Fingerstyle spielweise kann sowohl auf einer Westerngitarre (akustisches Instrument mit Stahlsaiten), als auch auf einer Konzertgitarre umgesetzt werden. Eigentlich ist das Spiel der klassischen Gitarre auch "Fingerstyle", aber der Begriff hat sich im Zusammenhang mit dem Spiel aktueller Stilrichtungen etabliert. Häufig werden aktuelle Songs auf dem Instrument umgesetzt, indem Melodie und Begleitung in einem Arrangement verschmelzen.'>Mehr erfahren</a>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-4">
             <img class="previewIcon" src="assets/images/schwerpunkte/song.svg">
             <div><h3>Liedbegleitung</h3></div>
-            <a tabindex="0" class="btn btn-primary" role="button" data-toggle="popover" data-trigger="focus" title="Liedbegleitung" data-content="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut">Mehr erfahren</a>
+            <a tabindex="0" class="btn btn-primary" role="button" data-toggle="popover" data-trigger="focus" title="Liedbegleitung" data-content='Der Weg zum schnellsten Erfolgserlebnis führt über die Liedbegleitung. Schon mit zwei Akkorgriffen lassen sich einfache Lieder begleiten. Bestandteil des Unterrichts sind Schlag- und Zupftechniken. Speziell das Fingerpicking, bei dem der Daumen der rechten Hand einen kontinuierlichen Wechselbass spielt, ist eine klang- und wirkungsvolle Möglichkeit Lieder zu Begleiten. Parallel erlernt der Schüler Rhythmen zu lesen und zu spielen. Wie die Bezeichnung "Liedbegleitung" impliziert, wird sie eine runde Sache, wenn man zum Spiel singt. Da ich 8 Semester Gesangsunterricht studiert habe, kann ich hier - wenn nötig - weiterhelfen. Natütlich kann auch ein weiteres Melodieinstrument die Melodie übernehmen, oder der Gitarrenschüler die Audioversion eines Liedes begleiten.'>Mehr erfahren</a>
         </div>
-        <div class="col-md-2">
+        <!-- <div class="col-md-2">
             <img class="previewIcon" src="assets/images/schwerpunkte/rock.svg">
             <div><h3>Rock</h3></div>
             <a tabindex="0" class="btn btn-primary" role="button" data-toggle="popover" data-trigger="focus" title="Rock" data-content="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut">Mehr erfahren</a>
@@ -30,7 +30,7 @@
             <img class="previewIcon" src="assets/images/schwerpunkte/microphone-with-wire.svg">
             <div><h3>Pop</h3></div>
             <a tabindex="0" class="btn btn-primary" role="button" data-toggle="popover" data-trigger="focus" title="Pop" data-content="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut">Mehr erfahren</a>
-        </div>
+        </div> -->
     </div>
 
     <br>
