switch to modals & seo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,8 @@
 </head>
 
 <body>
+    {% include modals.html %}
+
     <nav id="thenavbar" class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
