--- a/_includes/gitarrenunterricht.html
+++ b/_includes/gitarrenunterricht.html
@@ -66,8 +66,8 @@
                   </div>
                   <div id="_collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                     <div class="panel-body">
-                        Der Unterricht ist schülerzentiert. In einem Vorgespräch versuche ich etwas über die musikalischen Vorlieben und Neigungen des Schülers zu erfahren, um entsprechendes Unterrichtsmaterial anzubieten.
-                        Bei Anfängern geht es darum "Basics" zu erlernen. Eine gute Technik ist u.a. Voraussetzung, sich in den verschiedenen Musikstilen zurechtzufinden und auszudrücken. Zum Start bieten sich meistens zwei Möglichkeiten an: Liedbegleitung nach Akkorden, oder Melodiespiel nach Noten.
+                        Der Unterricht ist schülerzentriert. In einem Vorgespräch versuche ich etwas über die musikalischen Vorlieben und Neigungen des Schülers zu erfahren, um entsprechendes Unterrichtsmaterial anzubieten.
+                        Bei Anfängern geht es darum "Basics" zu erlernen. Eine gute Spielechnik ist u.a. Voraussetzung, sich in den verschiedenen Musikstilen zurechtzufinden und auszudrücken. Zum Start bieten sich meistens zwei Möglichkeiten an: Liedbegleitung nach Akkorden, oder Melodiespiel nach Noten.
                         Bei fortgeschrittenen Spielern stimme ich den Unterricht noch stärker auf die individuellen Fähigkeiten und Bedürfnisse ab.
                         Musiktheorie lasse ich in den Unterricht "einfließen".<br><br>
                         
