--- a/_includes/kosten.html
+++ b/_includes/kosten.html
@@ -55,8 +55,8 @@
 
 <div class="container text-left">
     <p>
-        <b>Anmerkung:</b><br>
-        Die Kosten pro Monat sind der 12. Teil des Jahresbetrages, der sich bei 39 Gitarrenunterrichtsstunden (die im Verlauf des Jahres gegeben werden) errechnet.<br>Zum Beispiel 30 Min. Einzelunterricht:<br>
+        <b>Details</b><br>
+        Die Kosten pro Monat sind der 12. Teil des Jahresbetrages, der sich bei 39 Gitarrenunterrichtsstunden ergibt. Von den 52 Kalenderwochen sind 13 Wochen Schulferien also abgezogen, da dann auch kein Unterricht stattfindet.<br>Zum Beispiel 30 Min. Einzelunterricht:<br>
     </p>
 
     <p>
@@ -64,9 +64,9 @@
     </p>
 
     <p>
-        Wird der Gitarrenunterricht im laufenden Unterrichtsjahr beendet, so erstelle ich eine Endabrechnung, in der die eingezahlten Monatsbeträge und die erteilten Stunden gegengerechnet werden.
-        In den 13 Wochen Schulferien und an gesetzlichen Feiertagen findet kein Unterricht statt.
-        Nach Ablauf der Probephase (ca. 4-6 Wochen), beträgt die Kündigungszeit 1 Monat zum Monatsende.
+        Wird der Gitarrenunterricht im laufenden Unterrichtsjahr beendet, so erstelle ich eine Endabrechnung, in der die eingezahlten Monatsbeträge und die erteilten Stunden gegengerechnet werden.<br>
+        An Brücken- und gesetzlichen Feiertagen findet kein Unterricht statt, ohne dass es Einfluss auf das zu zahlende Honorar hat.<br>
+        Nach Ablauf der Probephase (ca. 4-6 Wochen), beträgt die Kündigungszeit 1 Monat zum Monatsende.<br>
         Es müssen <b>keine</b> 1/2 Jahres- oder Ganzjahresverträge abgeschlossen werden.
     </p>
 </div>
