--- a/_includes/gitarrenunterricht.html
+++ b/_includes/gitarrenunterricht.html
@@ -9,17 +9,17 @@
         <div class="col-md-4">
             <img class="previewIcon" src="assets/images/schwerpunkte/spanish-guitar.svg">
             <div><h3>Klassische Gitarre</h3></div>
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal_klassischeGitarre">Mehr Erfahren</button>
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal_klassischeGitarre">Mehr erfahren</button>
         </div>
         <div class="col-md-4">
             <img class="previewIcon" src="assets/images/schwerpunkte/hand.svg">
             <div><h3>Fingerstyle</h3></div>
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal_fingerstyle">Mehr Erfahren</button>
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal_fingerstyle">Mehr erfahren</button>
         </div>
         <div class="col-md-4">
             <img class="previewIcon" src="assets/images/schwerpunkte/song.svg">
             <div><h3>Liedbegleitung</h3></div>
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal_liedbegleitung">Mehr Erfahren</button>
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal_liedbegleitung">Mehr erfahren</button>
         </div>
         <!-- <div class="col-md-2">
             <img class="previewIcon" src="assets/images/schwerpunkte/rock.svg">
@@ -45,7 +45,7 @@
                   <div class="panel-heading" role="tab" id="headingOne">
                     <h4 class="panel-title">
                       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#_collapseOne" aria-expanded="true" aria-controls="_collapseOne">
-                        <b>Gitarrenunterricht für Kinder: (Zum öffnen klicken)</b>
+                        <b>Gitarrenunterricht für Kinder: (Zum Öffnen klicken)</b>
                       </a>
                     </h4>
                   </div>
@@ -60,7 +60,7 @@
                   <div class="panel-heading" role="tab" id="headingTwo">
                     <h4 class="panel-title">
                       <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#_collapseTwo" aria-expanded="false" aria-controls="_collapseTwo">
-                        <b>Gitarrenunterricht für Jugendliche und Erwachsene: (Zum öffnen klicken)</b>
+                        <b>Gitarrenunterricht für Jugendliche und Erwachsene: (Zum Öffnen klicken)</b>
                       </a>
                     </h4>
                   </div>
