--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -7,10 +7,10 @@
             <h4 class="modal-title" id="label_modal_klassischeGitarre">Klassische Gitarre</h4>
         </div>
         <div class="modal-body">
-            Der Begriff "klassische Gitarre" bezieht sich auf die Art des Instrumentes, seine Haltung und Spielweise, sowie das Repertoire. Es können Stücke aus den Musikepochen von Renaissance bis zur Moderne erlernt werden. Notenkentnisse sind von Vorteil aber kein Muss, da viele Stücke auch als Tabulatur (Griffschrift) angeboten werden. Auch Anfänger könnnen mit einfachen Stücken beginnen. Die Tonbildung spielt bei der Konzertgitarre und speziell beim Spiel klassischer Literatur eine große Rolle.
+            Der Begriff "klassische Gitarre" bezieht sich auf die Art des Instrumentes, seine Haltung und Spielweise sowie das Repertoire. Es können Stücke aus den Musikepochen von Renaissance bis zur Moderne erlernt werden. Notenkenntnisse sind von Vorteil aber kein Muss, da viele Stücke auch als Tabulatur (Griffschrift) angeboten werden. Auch Anfänger könnnen mit einfachen Stücken beginnen. Die Tonbildung spielt bei der Konzertgitarre und speziell beim Spiel klassischer Literatur eine große Rolle.
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-primary" data-dismiss="modal">Schließen</button>
+            <button type="button" class="btn btn-primary" data-dismiss="modal">schließen</button>
         </div>
         </div>
     </div>
@@ -24,10 +24,10 @@
             <h4 class="modal-title" id="label_modal_fingerstyle">Fingerstyle</h4>
         </div>
         <div class="modal-body">
-            Fingerstyle Spielweise kann sowohl auf einer Westerngitarre (akustisches Instrument mit Stahlsaiten), als auch auf einer Konzertgitarre umgesetzt werden. Eigentlich ist das Spiel der klassischen Gitarre auch "Fingerstyle", aber der Begriff hat sich im Zusammenhang mit dem Spiel aktueller Stilrichtungen etabliert. Häufig werden aktuelle Songs auf dem Instrument umgesetzt, indem Melodie und Begleitung in einem Arrangement verschmelzen.
+            Fingerstyle Spielweise kann sowohl auf einer Westerngitarre (akustisches Instrument mit Stahlsaiten) als auch auf einer Konzertgitarre umgesetzt werden. Eigentlich ist das Spiel der klassischen Gitarre auch "Fingerstyle", aber der Begriff hat sich im Zusammenhang mit dem Spiel aktueller Stilrichtungen etabliert. Häufig werden aktuelle Songs auf dem Instrument umgesetzt, indem Melodie und Begleitung in einem Arrangement verschmelzen.
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-primary" data-dismiss="modal">Schließen</button>
+            <button type="button" class="btn btn-primary" data-dismiss="modal">schließen</button>
         </div>
         </div>
     </div>
@@ -41,11 +41,11 @@
             <h4 class="modal-title" id="label_modal_liedbegleitung">Liedbegleitung</h4>
         </div>
         <div class="modal-body">
-                Der Weg zum schnellsten Erfolgserlebnis führt über die Liedbegleitung. Schon mit zwei Akkorgriffen lassen sich einfache Lieder begleiten. Bestandteil des Unterrichts sind Schlag- und Zupftechniken. Speziell das Fingerpicking, bei dem der Daumen der rechten Hand einen kontinuierlichen Wechselbass spielt, ist eine klang- und wirkungsvolle Möglichkeit Lieder zu Begleiten. Parallel erlernt der Schüler Rhythmen zu lesen und zu spielen.<br>
-                Wie die Bezeichnung "Liedbegleitung" impliziert, wird sie eine runde Sache, wenn man zum Spiel singt. Da ich 8 Semester Gesangsunterricht studiert habe, kann ich hier - wenn nötig - weiterhelfen. Natürlich kann auch ein weiteres Melodieinstrument die Melodie übernehmen, oder der Gitarrenschüler die Audioversion eines Liedes begleiten. <br>Ein weiteres Ziel des Gitarrenunterrichts im Rahmen der Liedbegleitung kann sein, den Schüler in die Lage zu versetzen sich Songs selbst zu erarbeiten. Hierzu gehört die Takt- und Tonart zu bestimmen, die Begleitakkorde herauszuhören und zuzuordnen.
+                Der Weg zum schnellsten Erfolgserlebnis führt über die Liedbegleitung. Schon mit zwei Akkorgriffen lassen sich einfache Lieder begleiten. Bestandteil des Unterrichts sind Schlag- und Zupftechniken. Speziell das Fingerpicking, bei dem der Daumen der rechten Hand einen kontinuierlichen Wechselbass spielt, ist eine klang- und wirkungsvolle Möglichkeit Lieder zu begleiten. Parallel erlernt der Schüler Rhythmen zu lesen und zu spielen.<br>
+                Wie die Bezeichnung "Liedbegleitung" impliziert, wird sie eine runde Sache, wenn man zum Spiel singt. Da ich 8 Semester Gesangsunterricht studiert habe, kann ich hier - wenn nötig - weiterhelfen. Natürlich kann auch ein weiteres Melodieinstrument die Melodie übernehmen, oder der Gitarrenschüler die Audioversion eines Liedes begleiten. <br>Ein weiteres Ziel des Gitarrenunterrichts im Rahmen der Liedbegleitung kann sein, den Schüler in die Lage zu versetzen sich Songs selbst zu erarbeiten. Hierzu gehört die Takt- und Tonart zu bestimmen, die Begleitakkorde herauszuhören und der Melodie zuzuordnen.
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-primary" data-dismiss="modal">Schließen</button>
+            <button type="button" class="btn btn-primary" data-dismiss="modal">schließen</button>
         </div>
         </div>
     </div>
