--- a/_includes/technik.html
+++ b/_includes/technik.html
@@ -32,7 +32,7 @@
         <a href="./assets/images/technik/cubase_screenshot_m.jpg" itemprop="contentUrl" data-size="1438x959">
             <img src="./assets/images/technik/cubase_screenshot.jpg" itemprop="thumbnail" alt="Cubase Logo" />
         </a>
-        <figcaption itemprop="caption description">Für Aufnahmen steht das Sequenzerprogramm Cubase, mit diversen Plugins zur Verfügung.</figcaption>
+        <figcaption itemprop="caption description">Für Aufnahmen steht das Sequenzerprogramm Cubase mit diversen Plugins zur Verfügung.</figcaption>
     </figure>
 
     <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
@@ -46,7 +46,7 @@
         <a href="./assets/images/technik/MG_4205_m.jpg" itemprop="contentUrl" data-size="1920x1280">
             <img src="./assets/images/technik/3.jpg" itemprop="thumbnail" alt="Membranmikrofon in Nahaufnahme" />
         </a>
-        <figcaption itemprop="caption description">Diverse Groß- und Kleinmembranmikrofone sind zum abnehmen des Gitarrensounds oder der Gesangsstimme bereit.</figcaption>
+        <figcaption itemprop="caption description">Diverse Groß- und Kleinmembranmikrofone sind zum Abnehmen des Gitarrensounds oder der Gesangsstimme bereit.</figcaption>
     </figure>
 
     <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
