--- a/_includes/kosten.html
+++ b/_includes/kosten.html
@@ -53,22 +53,38 @@
     </table>
 </div>
 
-<div class="container text-left">
-    <p>
-        <b>Details</b><br>
-        Die Kosten pro Monat sind der 12. Teil des Jahresbetrages, der sich bei 39 Gitarrenunterrichtsstunden ergibt. Von den 52 Kalenderwochen sind 13 Wochen Schulferien also abgezogen, da dann auch kein Unterricht stattfindet.<br>Zum Beispiel 30 Min. Einzelunterricht:<br>
-    </p>
+<div class="container">
+    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+        <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingOne">
+                <h4 class="panel-title">
+                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#_collapsePriceDetails" aria-expanded="true" aria-controls="_collapsePriceDetails">
+                        <b>Details (Zum öffnen klicken)</b>
+                    </a>
+                </h4>
+            </div>
+            <div id="_collapsePriceDetails" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+                <div class="panel-body">
+                    <div class="container text-left">
+                        <p>
+                        Die Kosten pro Monat sind der 12. Teil des Jahresbetrages, der sich bei 39 Gitarrenunterrichtsstunden ergibt. Von den 52 Kalenderwochen sind 13 Wochen Schulferien also abgezogen, da dann auch kein Unterricht stattfindet.<br>Zum Beispiel 30 Min. Einzelunterricht:<br>
+                        </p>
 
-    <p>
-        <b>19,00 Euro; Einzelpreis * 39 Unterrichtseinheiten / 12 Monate = 62 Euro</b>
-    </p>
+                        <p>
+                        <b>19,00 Euro; Einzelpreis * 39 Unterrichtseinheiten / 12 Monate = 62 Euro</b>
+                        </p>
 
-    <p>
-        Wird der Gitarrenunterricht im laufenden Unterrichtsjahr beendet, so erstelle ich eine Endabrechnung, in der die eingezahlten Monatsbeträge und die erteilten Stunden gegengerechnet werden.<br>
-        An Brücken- und gesetzlichen Feiertagen findet kein Unterricht statt, ohne dass es Einfluss auf das zu zahlende Honorar hat.<br>
-        Nach Ablauf der Probephase (ca. 4-6 Wochen), beträgt die Kündigungszeit 1 Monat zum Monatsende.<br>
-        Es müssen <b>keine</b> 1/2 Jahres- oder Ganzjahresverträge abgeschlossen werden.
-    </p>
+                        <p>
+                        Wird der Gitarrenunterricht im laufenden Unterrichtsjahr beendet, so erstelle ich eine Endabrechnung, in der die eingezahlten Monatsbeträge und die erteilten Stunden gegengerechnet werden.<br>
+                        An Brücken- und gesetzlichen Feiertagen findet kein Unterricht statt, ohne dass es Einfluss auf das zu zahlende Honorar hat.<br>
+                        Nach Ablauf der Probephase (ca. 4-6 Wochen), beträgt die Kündigungszeit 1 Monat zum Monatsende.<br>
+                        Es müssen <b>keine</b> 1/2 Jahres- oder Ganzjahresverträge abgeschlossen werden.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <br>
