remove bad containers

--- a/_includes/gitarrenunterricht.html
+++ b/_includes/gitarrenunterricht.html
@@ -1,10 +1,10 @@
 <div id="jumbotron-unterricht" class="jumbotron">
-    <div class="container">
+    <div>
         <h2>Gitarrenunterricht</h2>
     </div>
 </div>
 
-<div class="container">
+<div>
     <div class="row center-text unterricht-schwerpunkte">
         <div class="col-md-4">
             <img class="previewIcon" src="assets/images/schwerpunkte/spanish-guitar.svg">
