--- a/_includes/kontakt.html
+++ b/_includes/kontakt.html
@@ -1,14 +1,14 @@
 <div id="jumbotron-kontakt" class="jumbotron">
-  <div class="container">
+  <div>
       <h2>Kontakt</h2>
   </div>
 </div>
 
-<div class="container kontakt-container">
+<div class="kontakt-container">
   <div class="row">
     <h3>Kontaktdaten - Jetzt unverbindlichen Termin sichern</h3>
     <hr>
-    <div class="container icon-row-container contact_options">
+    <div class="icon-row-container contact_options">
       <div class="row margin-top-elements-in-row ">
           <div class="col-md-4">
             <img class="previewIcon" src="assets/images/kontakt_phone.svg">
