--- a/_includes/person.html
+++ b/_includes/person.html
@@ -1,10 +1,10 @@
 <div id="jumbotron-person" class="jumbotron">
-  <div class="container">
+  <div>
       <h2>Zur Person</h2>
   </div>
 </div>
 
-<div class="container">
+<div>
     <div class="row">
         <div class="col-md-6">
             <div class="lebenslauf">
