--- a/_includes/technik.html
+++ b/_includes/technik.html
@@ -1,10 +1,10 @@
 <div id="jumbotron-technik" class="jumbotron">
-    <div class="container">
+    <div>
         <h2>Technik</h2>
     </div>
 </div>
 
-<div class="container text-left">
+<div class="text-left">
     <div class="row">
         <div class="col-md-6">
             <br>
