--- a/_includes/kosten.html
+++ b/_includes/kosten.html
@@ -1,10 +1,10 @@
 <div id="jumbotron-kosten" class="jumbotron">
-  <div class="container">
+  <div>
       <h2>Kosten</h2>
   </div>
 </div>
 
-<div class="container icon-row-container">
+<div class="icon-row-container">
     <div class="row margin-top-elements-in-row ">
         <div class="col-md-4">
             <img class="previewIcon" src="assets/images/kosten_probezeit.svg">
@@ -23,7 +23,7 @@
 
 <hr class="line-splitter">
 
-<div class="container">
+<div>
     <table class="table table-bordered">
         <tr>
             <th>Art</th>
@@ -53,7 +53,7 @@
     </table>
 </div>
 
-<div class="container">
+<div>
     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
         <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="headingOne">
@@ -65,7 +65,7 @@
             </div>
             <div id="_collapsePriceDetails" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                 <div class="panel-body">
-                    <div class="container text-left">
+                    <div class="text-left">
                         <p>
                         Die Kosten pro Monat sind der 12. Teil des Jahresbetrages, der sich bei 39 Gitarrenunterrichtsstunden ergibt. Von den 52 Kalenderwochen sind 13 Wochen Schulferien also abgezogen, da dann auch kein Unterricht stattfindet.<br>Zum Beispiel 30 Min. Einzelunterricht:<br>
                         </p>
