--- a/_includes/location.html
+++ b/_includes/location.html
@@ -14,7 +14,7 @@
         <div class="col-md-6">
             <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
                 <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                    <a href="./assets/images/location/haus_aussen.jpg" itemprop="contentUrl" data-size="363x230">
+                    <a href="./assets/images/location/haus_aussen_m.jpg" itemprop="contentUrl" data-size="1400x1965">
                         <img src="./assets/images/location/haus_aussen.jpg" itemprop="thumbnail" alt="Außenansicht der Unterrichtsräume von Gitarrenlehrer Bernhard Welling in Eimsbüttel nahe der Osterstraße" />
                     </a>
                 </figure>
@@ -30,7 +30,7 @@
             <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
                 <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                     <a href="./assets/images/gallery_main/MG_4179_m.jpg" itemprop="contentUrl" data-size="1920x1280">
-                        <img src="./assets/images/gallery_main/3.png" itemprop="thumbnail" alt="Einblick in die Unterrichtsräume und das schalldichte Tonstudio von Gitarrenlehrer Bernhard Welling in Eimsbüttel" />
+                        <img src="./assets/images/gallery_main/3.jpg" itemprop="thumbnail" alt="Einblick in die Unterrichtsräume und das schalldichte Tonstudio von Gitarrenlehrer Bernhard Welling in Eimsbüttel" />
                     </a>
                 </figure>
             </div>
