--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ footer{
     background-image: linear-gradient(
         rgba(0, 0, 0, 0.5),
         rgba(0, 0, 0, 0.5)
-      ),url("../assets/images/jumbotron.png");
+      ),url("../assets/images/jumbotron.jpg");
     background-position: center;
     background-size: cover;
     margin-bottom: 40px;
