--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,7 +85,7 @@
                     ©2019 Bernhard Welling
                 </div>
                 <div class="col-md-4">
-                    Made by: <a target="_blank" href="http://kay-gonschior.de">kay-gonschior.de</a>
+                    Made by: <a href="http://kay-gonschior.de" target="_blank" rel="noopener">kay-gonschior.de</a>
                 </div>
             </div>
         </div>
