--- a/_includes/kosten.html
+++ b/_includes/kosten.html
@@ -54,7 +54,7 @@
 </div>
 
 <div>
-    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+    <div class="panel-group" id="accordion_kosten" role="tablist" aria-multiselectable="true">
         <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="headingOne">
                 <h4 class="panel-title">
