--- a/_includes/gitarrenunterricht.html
+++ b/_includes/gitarrenunterricht.html
@@ -49,7 +49,7 @@
                       </a>
                     </h4>
                   </div>
-                  <div id="_collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+                  <div id="_collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                     <div class="panel-body">
                         Ich gebe Gitarrenunterricht für Kinder ab dem Schuleintrittsalter. Mit Hilfe einer "Gitarrenschule" werden sie an das Lesen und Umsetzen von Noten herangeführt.
                         Eine Lehrerbegleitung lockert den Unterricht auf. So wird zusammen gespielt und gesungen.
