--- a/_includes/kosten.html
+++ b/_includes/kosten.html
@@ -74,12 +74,12 @@
                         <b>19,00 Euro; Einzelpreis * 39 Unterrichtseinheiten / 12 Monate = 62 Euro</b>
                         </p>
 
-                        <p>
-                        Wird der Gitarrenunterricht im laufenden Unterrichtsjahr beendet, so erstelle ich eine Endabrechnung, in der die eingezahlten Monatsbeträge und die erteilten Stunden gegengerechnet werden.<br>
-                        An Brücken- und gesetzlichen Feiertagen findet kein Unterricht statt, ohne dass es Einfluss auf das zu zahlende Honorar hat.<br>
-                        Nach Ablauf der Probephase (ca. 4-6 Wochen), beträgt die Kündigungszeit 1 Monat zum Monatsende.<br>
-                        Es müssen <b>keine</b> 1/2 Jahres- oder Ganzjahresverträge abgeschlossen werden.
-                        </p>
+                        <ul style="padding-left: 20px;">
+                            <li>Wird der Gitarrenunterricht im laufenden Unterrichtsjahr beendet, so erstelle ich eine Endabrechnung, in der die eingezahlten Monatsbeträge und die erteilten Stunden gegengerechnet werden.</li>
+                            <li>An Brücken- und gesetzlichen Feiertagen findet kein Unterricht statt, ohne dass es Einfluss auf das zu zahlende Honorar hat.</li>
+                            <li>Nach Ablauf der Probephase (ca. 4-6 Wochen), beträgt die Kündigungszeit 1 Monat zum Monatsende.</li>
+                            <li>Es müssen <b>keine</b> 1/2 Jahres- oder Ganzjahresverträge abgeschlossen werden.</li>
+                        </ul>
                     </div>
                 </div>
             </div>
