--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,8 @@
     <meta http-equiv="language" content="de">
     <meta name="Description" content="{{page.content_description}}">
     <meta name="robots" content="{{page.robot_tags}}">
+    <meta name="keywords" content="{{page.meta_keywords}}">
+    <meta name="author" content="{{page.meta_author}}">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <link rel="shortcut icon" href="assets/icon.ico" />
